2017-07-21  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-split): Use arg TRIM of split-string with
	emacs-version >= 24.4.

2017-07-19  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-tex.el (bbdb-tex): Allow empty space when calling
	\usepackage.

2017-07-19  Roland Winkler  <winkler@gnu.org>
	* tex/bbdb.sty: Use \RequirePackage.

2017-07-19  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-tex.el (bbdb-tex-alist): Improve docstring.

2017-07-03  Roland Winkler  <winkler@gnu.org>
	Use LaTeX for TeXing BBDB.
	* lisp/bbdb-tex.el: Replacement for lisp/bbdb-print.el.
	* lisp/bbdb-site.el.in (bbdb-tex-path): Renamed from
	bbdb-print-tex-path.  Allow new value t.
	* lisp/bbdb.el (bbdb-utilities-tex): Renamed from
	bbdb-utilities-print.
	(bbdb-separator-alist): New element tex-name.  Fix docstring.
	* lisp/makefile-temp, lisp/Makefile.am: Use bbdb-tex.
	* tex/bbdb-print-brief.tex, tex/bbdb-cols.tex, tex/bbdb-print.tex:
	Removed.
	* tex/bbdb.sty: New file.
	* tex/Makefile.am: Update accordingly.

2017-01-31  Roland Winkler  <winkler@gnu.org>
	* README: Really discontinue support for GNU Emacs 23.

2017-01-30  Barak A. Pearlmutter <barak@pearlmutter.net>
	* TODO: Extend feature wishlist.

2017-01-30  Barak A. Pearlmutter <barak@pearlmutter.net>
	* README: Add pointer to emacs wiki upgrade page.

2017-01-30  Roland Winkler  <winkler@gnu.org>
	* README, lisp/bbdb-site.el.in: Discontinue support for GNU Emacs
	23.

2017-01-28  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-anniv.el (bbdb-anniv-diary-entries): Propertize the
	strings passed to diary-add-to-list.
	(bbdb-anniv-goto-entry): New function used as
	diary-goto-entry-function.

2017-01-28  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-anniv.el (bbdb-anniv-diary-entries): Use cl-flet.

2017-01-28  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-anniv.el: Use lexical binding.
	* lisp/bbdb-anniv.el (bbdb-anniv-diary-entries): Use lexical
	environment for eval.

2017-01-28  Roland Winkler  <winkler@gnu.org>